--- a/Performative-Male-Rater_frontend/package.json
+++ b/Performative-Male-Rater_frontend/package.json
@@ -58,6 +58,7 @@
         "embla-carousel-react": "^8.6.0",
         "estree-walker": "2.0.2",
         "framer-motion": "^12.23.12",
+        "inferencejs": "^1.1.3",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.536.0",
         "mini-svg-data-uri": "^1.4.4",
@@ -77,9 +78,10 @@
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
         "react-rough-notation": "^1.0.5",
-        "react-syntax-highlighter": "^15.6.1",
+        "react-syntax-highlighter": "^5.8.0",
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^3.0.2",
+        "roboflow": "^0.0.2",
         "simplex-noise": "^4.0.3",
         "sonner": "^2.0.6",
         "swiper": "^11.2.10",
